--- a/about.html
+++ b/about.html
@@ -9,21 +9,30 @@
 <body>
     <header>
         <ul>
-            <li><a  href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a class="active" href="about.html">About</a></li>
-            <li><a  href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="cart.html">Cart</a></li>
           </ul>
     </header>
     <div class="container">
-    <h2>About</h2>
-    <div class="text">
+    <div id="aboutText" class="text">
+        <img id="logo" src="images/logo.png" width="200px" height="200px">
 <p>At Munamii Cakery, each cake, each box of cupcakes that we make has a very special
-    value for us. We not only want to bring a dessert to your table but rather a unique
-    experience for you, which will become an unforgettable memory. We have been in the
+    value for us.
+    </p>
+    <br>
+    <p>We not only want to bring a dessert to your table but rather a unique
+    experience for you, which will become an unforgettable memory.
+    </p>
+    <br>
+<p>
+    We have been in the
     pastry market for more than 8 years and now we offer you a new way to shop through
     our website.</p>
 </div>
+<div id="backgroundImg2"></div>
 </div>
 <footer>
     <a href="https://instagram.com"><img class="icon" src="images/instagram.png"></a>
