--- a/cart.html
+++ b/cart.html
@@ -7,14 +7,15 @@
     <title>Cart</title>
 </head>
 <body>
-    <header>
-        <ul>
-            <li><a class="active" href="home.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-    </header>
+  <header>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a class="active" href="cart.html">Cart</a></li>
+      </ul>
+</header>
     <div class="container">
         <div class="cart-container" id="cart">
             <h1>Your Shopping Cart</h1>
