--- a/contact.html
+++ b/contact.html
@@ -9,22 +9,25 @@
 <body>
     <header>
         <ul>
-            <li><a  href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a class="active" href="contact.html">Contact</a></li>
+            <li><a href="cart.html">Cart</a></li>
           </ul>
     </header>
     <div class="container">
-    <h2>Contact</h2>
 <div class="text">
+    <img id="logo" src="images/logo.png" width="200px" height="200px">
     <p>Home delivery service: All the city of Stockholm (redacted) and Malmo (redacted) with
         additional cost.
     </p>
+    <br>
     <p>
         Place to pick up order: Via la Costa Avenue. Blue Port gated neighbourhood. We will
         send you the GPS Location via WhatsApp.
     </p>
+    <br>
     <p>
         Orders must be placed 2 days before for greater security, processing and availability.
         Tuesday to Saturday
