--- a/product.html
+++ b/product.html
@@ -7,21 +7,23 @@
     <title>Product</title>
 </head>
 <body>
-    <header>
-        <ul>
-            <li><a  href="home.html">Home</a></li>
-            <li><a class="active" href="products.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-    </header>
+  <header>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="cart.html">Cart</a></li>
+      </ul>
+</header>
     <div class="container">
     <div id="productPageCont">
         <img src="" alt="Product Image" class="product-image">
         <h2 class="product-title"></h2>
         <p class="product-price"></p>
+        <button id="addToCart">Add To Cart</button>
       </div>
-      <button id="addToCart">Add To Cart</button>
+   
     </div>
       <footer>
         <a href="https://instagram.com">Instagram</a>
