--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
     <header>
         <ul>
-            <li><a class="active" href="home.html">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="cart.html">Cart</a></li>
+         
           </ul>
     </header>
     <div class="container">
     <div id="backgroundImg">
-    <h1>Munamii Cakery</h1>    
+        <img id="logo" src="images/logo.png" width="200px" height="200px">
     </div>
     <div id="container">
         <form id="contact" action="">
