--- a/products.html
+++ b/products.html
@@ -7,14 +7,15 @@
     <title>Products</title>
 </head>
 <body>
-    <header>
-        <ul>
-            <li><a  href="home.html">Home</a></li>
-            <li><a class="active" href="products.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-    </header>
+  <header>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="cart.html">Cart</a></li>
+      </ul>
+</header>
 <div class="cupcakeDiv">
   <h1 class="section-header">Cupcakes</h1>
   <div class="product-container">
